# customgpt

customgpt/: Makefile  README.md  pre-commit.yaml  pyproject.toml  requirements.txt
customgpt/app/: __init__.py  config.py  run.py
customgpt/app/admin/: views.py
customgpt/app/ai_models/: dao.py  models.py  utils.py
customgpt/app/ai_models/yandex_gpt/: dao.py  shemas.py  utils.py
customgpt/app/analytics/: routes.py
customgpt/app/auth/: forms.py  mail.py  routes.py
customgpt/app/integrations/: dao.py  forms.py  models.py  routes.py
customgpt/app/integrations/telegram/: dao.py  manager.py  models.py  telegram.py  telegram_bot.py
customgpt/app/projects/: dao.py  models.py  routes.py  setting_bot.py  utils.py
customgpt/app/static/: all_projects.css  script.js  setting_bot.js  style.css
customgpt/app/templates/: sidebar.html
customgpt/app/templates/analytics/: analytic.html
customgpt/app/templates/auth/: changing_the_password.html  email_confirmation.html  index.html  letter_registration.html  login.html  recovery_password.html  recovery_password_email.html  registration.html
customgpt/app/templates/integrations/: integration.html  telegram_integration.html
customgpt/app/templates/projects/: all_projects.html  setting_bot.html  sidebar_setting_bot.html
customgpt/app/users/: models.py
customgpt/migrations/versions/: 681f3d43926b_init_migration.py
