[tool.poetry]
name = "customgpt"
version = "0.1.0"
description = ""
authors = ["Tanuki Evil <tanuki.evil@yandex.ru>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-mail = "^0.10.0"
flask-sqlalchemy = "^3.1.1"
pytz = "^2024.2"
wtforms = "^3.1.2"
flask-wtf = "^1.2.1"
pdfplumber = "^0.11.4"
aiohttp = "^3.10.8"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
flask-admin = "^1.6.1"
flask-migrate = "^4.0.7"
flask-login = "^0.6.3"
requests = "^2.32.3"
email-validator = "^2.2.0"
yandexcloud = "^0.323.0"
langgraph-checkpoint-postgres = "^2.0.2"
langchain-community = "^0.3.3"
langgraph = "^0.2.39"
telebot = "^0.0.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120